--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head><link rel="style" href="/style.css"></head>
+	<head>
+	<link rel='stylesheet' id='style-css'  href='/style.css' type='text/css' media='all' />
+</head>
 <body>
 
 <div class="wsite-section-elements">
