--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <div><div style="height: 20px; overflow: hidden; width: 100%;"></div>
 <hr class="styled-hr" style="width:100%;">
 <div style="height: 20px; overflow: hidden; width: 100%;"></div></div>
-
+<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sunilg27" data-format="inline" data-related="false"></script>
 <div class="paragraph" style="text-align:left;"><font color="#2a2a2a"><font size="5"><strong><span>PERSONAL STATEMENT</span></strong></font><br><br><span>​﻿</span><font size="3"><span style="font-weight:normal"><span>﻿</span></span></font></font>Experienced, Creative and Energetic professional with approximately 12 years of combined experience in the field of software systems analysis, design and development.<br><br>Highly motivated individual with excellent communication skills. Can work effectively as part of a team or as an individual. Driven by challenges and continually seeking to develop new skills. Able to provide leadership, direction and take responsibility for the delivery of projects/products to meet the requirements of the business.<br><br>Trained and implemented SCRUM methodology in projects. Following the Agile methodology techniques to improve the software build cycles.<br><br>Highly experienced in gathering requirements, analyzing requirements, preparing documentary, designing, developing, basic testing and implementing application software.<br><br>Experience in project management, configuration Management, effort estimation, requirement analysis, team leadership, application and systems development. Strong technical ability to work on diversified platforms/technologies.&nbsp;</div>
 
 <h2 class="wsite-content-title">Areas of expertise</h2>
