Update styles for 404.html

--- a/404.html
+++ b/404.html
@@ -364,11 +364,11 @@ $(function () {
 
         <li>l</li>
 
-        <li class="one">4</li>
+        <li class="one" style="background-color: blue;">4</li>
 
-        <li class="two">0</li>
+        <li class="two" style="background-color: blue;">0</li>
 
-        <li class="three">4</li>
+        <li class="three" style="background-color: blue;">4</li>
 
         <li>y</li>
 
@@ -392,13 +392,13 @@ $(function () {
 
         <li>a</li>
 
-        <li class="four">p</li>
+        <li class="four" style="background-color: blue;">p</li>
 
-        <li class="five">a</li>
+        <li class="five" style="background-color: blue;">a</li>
 
-        <li class="six">g</li>
+        <li class="six" style="background-color: blue;">g</li>
 
-        <li class="seven">e</li>
+        <li class="seven" style="background-color: blue;">e</li>
 
         <li>v</li>
 
@@ -406,11 +406,11 @@ $(function () {
 
         <li>a</li>
 
-        <li class="eight">n</li>
+        <li class="eight" style="background-color: blue;">n</li>
 
-        <li class="nine">o</li>
+        <li class="nine" style="background-color: blue;">o</li>
 
-        <li class="ten">t</li>
+        <li class="ten" style="background-color: blue;">t</li>
 
         <li>s</li>
 
@@ -438,15 +438,15 @@ $(function () {
 
         <li>e</li>
 
-        <li class="eleven">f</li>
+        <li class="eleven" style="background-color: blue;">f</li>
 
-        <li class="twelve">o</li>
+        <li class="twelve" style="background-color: blue;">o</li>
 
-        <li class="thirteen">u</li>
+        <li class="thirteen" style="background-color: blue;">u</li>
 
-        <li class="fourteen">n</li>
+        <li class="fourteen" style="background-color: blue;">n</li>
 
-        <li class="fifteen">d</li>
+        <li class="fifteen" style="background-color: blue;">d</li>
 
         <li>s</li>
 
