--- a/404.html
+++ b/404.html
@@ -364,11 +364,11 @@ $(function () {
 
         <li>l</li>
 
-        <li class="one" style="background-color: blue;">4</li>
+        <li class="one" style="background-color: green;">4</li>
 
-        <li class="two" style="background-color: blue;">0</li>
+        <li class="two" style="background-color: green;">0</li>
 
-        <li class="three" style="background-color: blue;">4</li>
+        <li class="three" style="background-color: green;">4</li>
 
         <li>y</li>
 
@@ -392,13 +392,13 @@ $(function () {
 
         <li>a</li>
 
-        <li class="four" style="background-color: blue;">p</li>
+        <li class="four" style="background-color: green;">p</li>
 
-        <li class="five" style="background-color: blue;">a</li>
+        <li class="five" style="background-color: green;">a</li>
 
-        <li class="six" style="background-color: blue;">g</li>
+        <li class="six" style="background-color: green;">g</li>
 
-        <li class="seven" style="background-color: blue;">e</li>
+        <li class="seven" style="background-color: green;">e</li>
 
         <li>v</li>
 
@@ -406,11 +406,11 @@ $(function () {
 
         <li>a</li>
 
-        <li class="eight" style="background-color: blue;">n</li>
+        <li class="eight" style="background-color: green;">n</li>
 
-        <li class="nine" style="background-color: blue;">o</li>
+        <li class="nine" style="background-color: green;">o</li>
 
-        <li class="ten" style="background-color: blue;">t</li>
+        <li class="ten" style="background-color: green;">t</li>
 
         <li>s</li>
 
@@ -438,15 +438,15 @@ $(function () {
 
         <li>e</li>
 
-        <li class="eleven" style="background-color: blue;">f</li>
+        <li class="eleven" style="background-color: green;">f</li>
 
-        <li class="twelve" style="background-color: blue;">o</li>
+        <li class="twelve" style="background-color: green;">o</li>
 
-        <li class="thirteen" style="background-color: blue;">u</li>
+        <li class="thirteen" style="background-color: green;">u</li>
 
-        <li class="fourteen" style="background-color: blue;">n</li>
+        <li class="fourteen" style="background-color: green;">n</li>
 
-        <li class="fifteen" style="background-color: blue;">d</li>
+        <li class="fifteen" style="background-color: green;">d</li>
 
         <li>s</li>
 
@@ -476,9 +476,9 @@ $(function () {
       <p>Check the URL you entered for any mistakes and try again. Alternatively, checkout the following links to navigate yourself.</p>
 
       <div id="navigation">
-        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.2.0/">Go to 23.2.0 documentation</a>
-        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.4.0/">Go to 23.4.0 documentation</a>
-        <a class="navigation" href="http://developer.opentext.com/">Visit Opentext Developer website</a>
+        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.2.0/">Go to 23.2.0 documentation</a><br/>
+        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.4.0/">Go to 23.4.0 documentation</a><br/>
+        <a class="navigation" href="http://developer.opentext.com/">Visit Opentext Developer website</a><br/>
       </div>
     </div>
   </div>
