--- a/404.html
+++ b/404.html
@@ -471,14 +471,14 @@ $(function () {
     </div>
 
     <div id="main-content">
-      <h1>You're here because it was not a complete URL or We couldn't find what you were looking for.</h1>
+      <h2>You're here because it was not the right path:-(</h2>
 
-      <p>Check the URL you entered for any mistakes and try again. Alternatively, checkout the following links to navigate yourself.</p>
+      <p>Checkout the below links to navigate yourself...</p>
 
-      <div id="navigation">
-        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.2.0/">Go to 23.2.0 documentation</a><br/>
-        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.4.0/">Go to 23.4.0 documentation</a><br/>
-        <a class="navigation" href="http://developer.opentext.com/">Visit Opentext Developer website</a><br/>
+      <div id="navigation" style="width:300px;">
+        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.2.0/" style="background-color: green;">23.2.0 documentation</a>
+        <a class="navigation" href="opentext.github.io/d2sv-sdk/23.4.0/" style="background-color: gray;">23.4.0 documentation</a>
+        <a class="navigation" href="http://developer.opentext.com/" style="background-color: blue;">Opentext Developer portal</a>
       </div>
     </div>
   </div>
